<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NeWork</string>
    <string name="title_reg_button">Registration</string>
    <string name="title_reg">Registration</string>
    <string name="hint_login_edit_text">Login</string>
    <string name="hint_password_edit_text">Password</string>
    <string name="hint_name_job_edit_text">Name</string>
    <string name="avatar_load_button">Avatar Load Button</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="posts_item_menu">Posts</string>
    <string name="events_item_menu">Events</string>
    <string name="users_item_menu">Users</string>
    <string name="title_event">Event</string>
    <string name="desc_avatar_image">Avatar Image</string>
    <string name="title_likers">Likers</string>
    <string name="desc_icon_like">Icon Like</string>
    <string name="title_participant">Participant</string>
    <string name="desc_icon_people">Icon People</string>
    <string name="desc_ic_geo_location">Icon Geo Location</string>
    <string name="title_site">Site</string>
    <string name="title_mentioned">Mentioned</string>
    <string name="desc_icon_mentioned">Icon Mentioned</string>
    <string name="desc_icon_menu_button">Icon Menu Button</string>
    <string name="desc_attachment_image">Attachment Image</string>
    <string name="desc_image_play_button">Image Play Button</string>
    <string name="desc_icon_share">Icon Repost</string>
    <string name="save_item_menu">Save</string>
    <string name="desc_icon_button_save">Icon Button Save</string>
    <string name="title_new_post">New post</string>
    <string name="title_new_item">New item</string>
    <string name="date_format" translatable="false">dd.MM.yy HH:mm</string>
    <string name="title_post">Post</string>
    <string name="online" translatable="false">Online</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="title_speakers">Speakers</string>
    <string name="mention_item_menu">Mention</string>
    <string name="load_attachment_item_menu">Load Attachment</string>
    <string name="desc_icon_attachment">Icon Attachment</string>
    <string name="desc_icon_take_a_photo">Icon Take a Photo</string>
    <string name="text_menu_item_take_a_photo">Take a Photo</string>
    <string name="text_button_remove">Remove</string>
    <string name="title_new_event">New Event</string>
    <string name="desc_button_remove" tools:keep="@string/desc_button_remove">Button Remove</string>
    <string name="hint_date_event">Date</string>
    <string name="desc_icon_calendar" tools:keep="@string/desc_icon_calendar">Icon Calendar</string>
    <string name="title_type_event">Type</string>
    <string name="text_radio_button_online" translatable="false">Online</string>
    <string name="text_radio_button_offline" translatable="false">Offline</string>
    <string name="text_type_event_online" translatable="false">Online</string>
    <string name="desc_icon_button_delete">Icon Button Delete</string>
    <string name="desc_icon_profile" tools:keep="@string/desc_icon_profile">Icon Profile</string>
    <string name="profile_item_menu" tools:keep="@string/profile_item_menu">Profile</string>
    <string name="post_geolocation_item_menu">Geolocation</string>
    <string name="share_item_menu">Share</string>
    <string name="title_tab_item_user_details_first" tools:keep="@string/title_tab_item_user_details_first">Wall</string>
    <string name="title_tab_item_user_details_second" tools:keep="@string/title_tab_item_user_details_second">Jobs</string>
    <string name="title_new_job">New job</string>
    <string name="hint_position_edit_text">Position</string>
    <string name="name_create_job_button">Create</string>
    <string name="link">Link</string>
    <string name="menu_options_edit">Edit</string>
    <string name="menu_options_remove">Remove</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Error loading data</string>
    <string name="desc_icon_add_new_event">Icon Add Event</string>
    <string name="desc_icon_add_new_post">Icon Add Post</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_password_repeat_edit_text">Repeat password</string>
    <string name="sign_in_dialog">Sign in to proceed</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="sign_out_dialog" tools:keep="@string/sign_out_dialog">Are you sure?</string>
    <string name="authentication">Authentication</string>
    <string name="don_t_have_account">Don\'t have an account? Register</string>
    <string name="password_empty">Password cannot empty</string>
    <string name="error_user_exist">The user already exists</string>
    <string name="error_format_image">Invalid image format</string>
    <string name="pass_don_t_match">Passwords don\'t match</string>
    <string name="desc_select_date">Select Date</string>
    <string name="attachment_no_more_15mb">Attachment no more 15Mb</string>
    <string name="hint_text">Text</string>
    <string name="share">Share</string>
    <string name="select_date">Select date</string>
    <string name="enter_dates">Enter dates\n</string>
    <string name="mm_dd_yyyy" translatable="false">mm/dd/yyyy</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date\n</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="looking_for_a_job">Looking for a job</string>
    <string name="need_permission">Location permission is required</string>
    <string name="desc_button_plus">Button plus zoom</string>
    <string name="desc_button_minus">Button minus zoom</string>
    <string name="desc_button_location">Button get location</string>
    <string name="toast_select_date_event">Select date event</string>
    <string name="desc_button_job">Button job</string>
    <string name="desc_tab_layout">container tab post|job</string>
    <string name="login_button">Login</string>
    <string name="title_sign_in">Authorization</string>
    <string name="tabs_wall" translatable="false">Wall</string>
    <string name="tabs_jobs">Jobs</string>
    <string name="desc_map_fragment">Map Fragment</string>
</resources>