<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/take_photo"
        android:contentDescription="@string/desc_icon_take_a_photo"
        android:icon="@drawable/ic_photo_camera_24dp"
        android:title="@string/text_menu_item_take_a_photo"
        app:showAsAction="always" />

    <item
        android:id="@+id/load_attachment"
        android:contentDescription="@string/desc_icon_attachment"
        android:icon="@drawable/ic_attach_file_24dp"
        android:title="@string/load_attachment_item_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/users"
        android:contentDescription="@string/desc_icon_mentioned"
        android:icon="@drawable/ic_people_24dp"
        android:title="@string/mention_item_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/geolocation"
        android:contentDescription="@string/desc_screen_geo_location"
        android:icon="@drawable/ic_location_pin_24dp"
        android:title="@string/post_geolocation_item_menu"
        app:showAsAction="always" />
</menu>