<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BottomSheetFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/element_spacing"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DateEventET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/hint_date_event"
            app:endIconDrawable="@drawable/ic_calendar_24dp"
            app:endIconMode="custom"
            app:helperText="MM/dd/yyyy HH:mm"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/TitleTypeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/title_type_event"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/DateEventET" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintTop_toBottomOf="@id/TitleTypeTV">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingStart="@dimen/common_spacing"
                android:paddingEnd="@dimen/common_spacing"
                android:text="@string/text_radio_button_online"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/common_spacing"
                android:paddingEnd="@dimen/common_spacing"
                android:text="@string/text_radio_button_offline"
                android:textStyle="bold" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>