<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="328dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selectDatesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/enter_dates"
            android:textSize="@dimen/size_text_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectDatesTV" />

        <ImageButton
            android:id="@+id/datePickerIB"
            android:layout_width="@dimen/icon_min_size"
            android:layout_height="@dimen/icon_min_size"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/double_spacing"
            android:background="@drawable/ic_calendar_24dp"
            android:contentDescription="@string/select_date"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="@id/header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/datesCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:hint="@string/start_date"
            app:helperText="@string/mm_dd_yyyy"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateStartTI"
                android:layout_width="@dimen/size_enter_date_width"
                android:layout_height="@dimen/size_enter_date_height"
                android:focusable="false"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateEndLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:hint="@string/end_date"
            app:helperText="@string/mm_dd_yyyy"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEndInput"
                android:layout_width="@dimen/size_enter_date_width"
                android:layout_height="@dimen/size_enter_date_height"
                android:clickable="true"

                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/clearDateIB"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/ic_clear_24dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="@id/dateEndLayout"
            app:layout_constraintTop_toTopOf="@id/dateEndLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datesCL">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelIB"
            style="@style/button_job_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okIB"
            style="@style/button_job_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/ok" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>